nenu index - colorPalette
Co-authored-by: minee95 <minee95@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -41,7 +41,17 @@
 			<i class="fa fa-bars"></i>
 		</div>
 		
-		
+		<nav class="nav-menu">
+			<ul>
+				
+				<li class="active"><a href="home.html">Quienes somos</a></li>
+				<li><a href="about.html">Propósito</a></li>
+				<li><a href="service.html">Entrevistas</a></li>
+				<li><a href="portfolio.html">Autores</a></li>
+				<li><a href="portfolio.html">Libro</a></li>
+				
+			</ul>
+		</nav>
 	</header>
 	<!-- Header section end -->   
 
@@ -62,7 +72,7 @@
 		</div>
 		<!-- hero slider area -->
 		<div class="hero-slider">
-			<div class="hero-slide-item set-bg" data-setbg="img/pepe.jpg">
+			<div class="hero-slide-item set-bg" data-setbg="./img/pepe.jpg">
 				<div class="slide-inner">
 					<div class="slide-content">
 					<h2>HISTORIA<br>DEL<br>INTERNET</h2>
@@ -70,7 +80,7 @@
 					</div>	
 				</div>
 			</div>	
-			<div class="hero-slide-item set-bg" data-setbg="img/pepe.jpg">
+			<div class="hero-slide-item set-bg" data-setbg="img/pa.jpg">
 				<div class="slide-inner">
 					<div class="slide-content">
 					<h2>HISTORIA<br>DEL <br>INTERNET</h2>
@@ -101,91 +111,6 @@
 		</div>
 	</section>
 	<!-- Intro section end -->
-
-
-	<!-- Service section start -->
-	<section class="service-section spad">
-		<div class="container">
-			<div class="section-title">
-				<h2>Services</h2>
-			</div>
-			<div class="row">
-				<div class="col-lg-4 col-md-6">
-					<div class="service-box">
-						<div class="sb-icon">
-							<div class="sb-img-icon">
-								<img src="img/icon/dark/1.png" alt="">
-							</div>
-						</div>
-						<h3>Plans and Projects</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
-						<a href="#" class="readmore">READ MORE</a>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6">
-					<div class="service-box">
-						<div class="sb-icon">
-							<div class="sb-img-icon">
-								<img src="img/icon/dark/2.png" alt="">
-							</div>
-						</div>
-						<h3>Conceptual Architecture</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
-						<a href="#" class="readmore">READ MORE</a>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6">
-					<div class="service-box">
-						<div class="sb-icon">
-							<div class="sb-img-icon">
-								<img src="img/icon/dark/3.png" alt="">
-							</div>
-						</div>
-						<h3>Apartment Buildings</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
-						<a href="#" class="readmore">READ MORE</a>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6">
-					<div class="service-box">
-						<div class="sb-icon">
-							<div class="sb-img-icon">
-								<img src="img/icon/dark/4.png" alt="">
-							</div>
-						</div>
-						<h3>Skyscrapers Buildings</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
-						<a href="#" class="readmore">READ MORE</a>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6">
-					<div class="service-box">
-						<div class="sb-icon">
-							<div class="sb-img-icon">
-								<img src="img/icon/dark/5.png" alt="">
-							</div>
-						</div>
-						<h3>Documentation</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
-						<a href="#" class="readmore">READ MORE</a>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6">
-					<div class="service-box">
-						<div class="sb-icon">
-							<div class="sb-img-icon">
-								<img src="img/icon/dark/6.png" alt="">
-							</div>
-						</div>
-						<h3>Restauration Projects</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
-						<a href="#" class="readmore">READ MORE</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Service section end -->
 
 
 
@@ -309,6 +234,95 @@
 	<!-- Projects section end -->
 
 
+
+	
+	<!-- Service section start -->
+	<section class="service-section spad">
+		<div class="container">
+			<div class="section-title">
+				<h2>AUTORES</h2>
+			</div>
+			<div class="row">
+				<div class="col-lg-4 col-md-6">
+					<div class="service-box">
+						<div class="sb-icon">
+							<div class="sb-img-icon">
+								<img src="" alt="">
+								<img src="./img/internet/minerva.jpg" alt="">
+							</div>
+						</div>
+						<h3>Plans and Projects</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
+						<a href="#" class="readmore">READ MORE</a>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6">
+					<div class="service-box">
+						<div class="sb-icon">
+							<div class="sb-img-icon">
+								<img src="img/icon/dark/2.png" alt="">
+							</div>
+						</div>
+						<h3>Conceptual Architecture</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
+						<a href="#" class="readmore">READ MORE</a>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6">
+					<div class="service-box">
+						<div class="sb-icon">
+							<div class="sb-img-icon">
+								<img src="img/icon/dark/3.png" alt="">
+							</div>
+						</div>
+						<h3>Apartment Buildings</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
+						<a href="#" class="readmore">READ MORE</a>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6">
+					<div class="service-box">
+						<div class="sb-icon">
+							<div class="sb-img-icon">
+								<img src="img/icon/dark/4.png" alt="">
+							</div>
+						</div>
+						<h3>Skyscrapers Buildings</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
+						<a href="#" class="readmore">READ MORE</a>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6">
+					<div class="service-box">
+						<div class="sb-icon">
+							<div class="sb-img-icon">
+								<img src="img/icon/dark/5.png" alt="">
+							</div>
+						</div>
+						<h3>Documentation</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
+						<a href="#" class="readmore">READ MORE</a>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6">
+					<div class="service-box">
+						<div class="sb-icon">
+							<div class="sb-img-icon">
+								<img src="img/icon/dark/6.png" alt="">
+							</div>
+						</div>
+						<h3>Restauration Projects</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
+						<a href="#" class="readmore">READ MORE</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- Service section end -->
+
+
+
 	<!-- Clients section start -->
 	<div class="client-section spad">
 		<div class="container">
@@ -415,6 +429,6 @@
 	<script src="js/jquery.owl-filter.js"></script>
 	<script src="js/magnific-popup.min.js"></script>
 	<script src="js/circle-progress.min.js"></script>
-	<script src="js/main.js"></script>
+	<script src="./js/main.js"></script>
 </body>
 </html>
