--- a/SC-Minerva/internet.html
+++ b/SC-Minerva/internet.html
@@ -13,14 +13,18 @@ https://templatemo.com/tm-518-sentra
 
 -->
         <meta name="description" content="" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="apple-touch-icon" href="apple-touch-icon.png" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- Favicon -->
+        <link rel="apple-touch-icon" sizes="180x180" href="../img/favicons/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="../img/favicons/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="../img/favicons/favicon-16x16.png">
+        <link rel="manifest" href="../img/favicons/site.webmanifest">
 
-        <link rel="stylesheet" href="css/bootstrap.min.css" />
+        <link rel="stylesheet" href="../css/bootstrap.min.css" />
         <link rel="stylesheet" href="css/bootstrap-theme.min.css" />
         <link rel="stylesheet" href="css/fontAwesome.css" />
         <link rel="stylesheet" href="css/light-box.css" />
-        <link rel="stylesheet" href="css/owl-carousel.css" />
+        <link rel="stylesheet" href="../css/owl-carousel.css" />
         <link rel="stylesheet" href="css/templatemo-style.css" />
 
         <link
