nav menu fixed to page

--- a/index.html
+++ b/index.html
@@ -37,21 +37,18 @@
 	
 	<!-- Header section start -->   
 	<header class="header-area">
-		<a href="home.html" class="logo-area">
-			<!--<img src="img/logo.png" alt="">-->
-		</a>
 		<div class="nav-switch">
 			<i class="fa fa-bars"></i>
 		</div>
 		
 		<nav class="nav-menu">
 			<ul>
-				
-				<li class="active"><a href="home.html">Quienes somos</a></li>
-				<li><a href="about.html">Propósito</a></li>
-				<li><a href="service.html">Entrevistas</a></li>
-				<li><a href="portfolio.html">Autores</a></li>
-				<li><a href="portfolio.html">Libro</a></li>
+				<li class="active"><a href="home.html">Inicio</a></li>
+				<li><a href="#equipo">Quienes somos</a></li>
+				<li><a href="#mision">Propósito</a></li>
+				<li><a href="#autores">Autores</a></li>
+				<li><a href="#entrevistas">Entrevistas</a></li>
+				<li><a href="./SC-Minerva/internet.html">Libro</a></li>
 				
 			</ul>
 		</nav>
