--- a/SC-Minerva/internet.html
+++ b/SC-Minerva/internet.html
@@ -67,8 +67,8 @@ https://templatemo.com/tm-518-sentra
             <div id="main-nav" class="collapse navbar-collapse">
                 <nav>
                     <ul class="nav navbar-nav">
-                        <li><a href="#resumen">Resumen</a></li>
-                        <li><a href="#autores">Parte #</a></li>
+                        <li><a href="#resumen">INTRODUCCIÓN</a></li>
+                        <li><a href="#autores">CAP1: Panama y el Internet</a></li>
                         <li><a href="#metodo">Dato interesante</a></li>
                         <li><a href="#intro">algo aqui</a></li>
                         <li><a href="#blog">Blog Entries</a></li>
