fotos de los feos

--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
     
                                     <div class="card-image">
                                         <img
-                                            src="img/internet/Kevin Barria.jpeg"
+                                            src="img/KEVIN.jpeg"
                                             alt=""
                                             class="card-img"
                                         />
@@ -494,7 +494,7 @@
     
                                     <div class="card-image">
                                         <img
-                                            src="img/3.jpg"
+                                            src="img/Gabriel.jpeg"
                                             alt=""
                                             class="card-img"
                                         />
