--- a/SC-Minerva/internet.html
+++ b/SC-Minerva/internet.html
@@ -250,7 +250,7 @@ https://templatemo.com/tm-518-sentra
             <!-- SLIDE DE PROFESORES -->
             <section id="profesores" class="content-section">
                 <div class="section-heading">
-                    <h1>Sobre<br><em>Nosotros</em></h1>
+                    <h1>Padres del<br><em>Internet</em></h1>
                     <p>
                     <br></p>
                 </div>
