--- a/SC-Minerva/internet.html
+++ b/SC-Minerva/internet.html
@@ -718,7 +718,18 @@ https://templatemo.com/tm-518-sentra
                     </div>
                 </div>
             </section>
+            <section class="content-section">
+                <div class="col-md-12">
+                    <div class="section-heading">
+                        <h1>Entre<em>vistas</em></h1>
+                    </div>
+                </div>
+                <div class="text-content">
+                    <iframe width="100%" height="480" src="https://www.youtube.com/embed/wjvyMhKckro" title="Entrevistas" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 
+                    </iframe>
+                </div>
+            </section>
             
             <!-- FOOTER -->
             <section class="footer">
