--- a/SC-Minerva/internet.html
+++ b/SC-Minerva/internet.html
@@ -728,10 +728,23 @@ https://templatemo.com/tm-518-sentra
                 </div>
             </section>
             
+
             <!-- FOOTER -->
-            <section class="footer">
+            <div class="container">
+                <div class="single-brand">
+                    <a href="#">
+                        <img src="../img/fisc.png" alt="" />
+                    </a>
+                </div>
+                <div class="single-brand">
+                    <a href="#">
+                        <img src="../img/utpp.png" alt="" />
+                    </a>
+                </div>
+            </div>
+            <footer class="footer">
                 <p>Copyright &copy; Minerva García</p>
-            </section>
+            </footer>
         </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
