--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
     
                                     <div class="card-image">
                                         <img
-                                            src="img/3.jpg"
+                                            src=""
                                             alt=""
                                             class="card-img"
                                         />
@@ -562,7 +562,7 @@
     
                                     <div class="card-image">
                                         <img
-                                            src="img/clients/1.png"
+                                            src=""
                                             alt=""
                                             class="card-img"
                                         />
