links & borrar seccion cap2

--- a/SC-Minerva/internet.html
+++ b/SC-Minerva/internet.html
@@ -74,12 +74,13 @@ https://templatemo.com/tm-518-sentra
                     <ul class="nav navbar-nav">
                         <li><a href="#portada">Portada</a></li>
                         <li><a href="#cap1">Capítulo 1: Panama y el Internet</a></li>
-                        <li><a href="#cap2">Capítulo 2: Los Padres del Internet</a></li>
+                        <li><a href="#profesores">Capítulo 2: Los Padres del Internet</a></li>
                         <li><a href="#cap3">Capítulo 3: La UTP en el Proyecto</a></li>
                         <li><a href="#cap4">Capítulo 4: El antes y Después</a></li>
                         <li><a href="#cap5">Capítulo 5: Centralización del Internet</a></li>
                         <li><a href="#cap6">Capítulo 6: Problemas y más problemas</a></li>
                         <li><a href="#cap7">Capítulo 7: 2022 - 2050</a></li>
+                        <li><a href="#vid">Entrevistas</a></li>
                         <li><a id="back-link" href="../index.html">Regresar</a></li>
                     </ul>
                 </nav>
@@ -108,7 +109,7 @@ https://templatemo.com/tm-518-sentra
                         </a>
                     </li>
                     <li>
-                        <a href="#cap2">
+                        <a href="#profesores">
                             <span class="rect"></span>
                             <span class="circle"></span>
                             Capítulo 2
@@ -237,23 +238,11 @@ https://templatemo.com/tm-518-sentra
                     </div> 
             </section>
             
-            <section id="cap2" class="content-section"><br>
-                <div class="col-md-12">
-
-                    <div class="section-heading">
-                        <center><h1>Capítulo 2 -<em>Los Padres del Internet</em></h1></center>
-                    </div>
-                    <div class="text-content">                      
-                        <p>
-                            En octubre de este año se hace la solicitud de la instalación del enlace dedicado a 9600 bps, desde la Universidad de Costa Rica hasta sus instalaciones, a INTEL, en ese entonces entidad pública encargada de las telecomunicaciones (Instituto Nacional de Telecomunicaciones). En noviembre se hace una solicitud formal a la Universidad de Costa Rica la reserva del puerto de comunicación libre en el nodo BITNET de Costa Rica. Todo esto para poder traer 9600 bps, lo cual en nuestra época que la velocidad promedio en la región es de 20.19 Mbps nos resulta poco, pero para llegar a tener el internet de hoy en día hizo falta todo el esfuerzo realizado para esta red de tan solo 9600 bps la cual marco un antes y un después con respecto al internet en Panamá.
-                        </p>                       
-                    </div>
-                </div>
-            </section>
+           
             <!-- SLIDE DE PROFESORES -->
             <section id="profesores" class="content-section">
                 <div class="section-heading">
-                    <h1>Padres del<br><em>Internet</em></h1>
+                    <h1>Capítulo 2 <br><em> Padres del Internet</em></h1>
                     <p>
                     <br></p>
                 </div>
