fixed http over https

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <![endif]-->
         <link rel="stylesheet" href="text/sss/sss.css">
             <link rel="stylesheet" href="text/sss/estilos.css">
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
         <!-- For the FRASES slide -->
     </head>
     <body>
