fotos & loader colors

--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
     
                                     <div class="card-image">
                                         <img
-                                            src=""
+                                            src="img/internet/russell.jpeg"
                                             alt=""
                                             class="card-img"
                                         />
@@ -562,7 +562,7 @@
     
                                     <div class="card-image">
                                         <img
-                                            src=""
+                                            src="img/internet/jose.jpeg"
                                             alt=""
                                             class="card-img"
                                         />
