--- a/SC-Minerva/internet.html
+++ b/SC-Minerva/internet.html
@@ -204,7 +204,7 @@ https://templatemo.com/tm-518-sentra
                             </p>
                             
                             <br><br>
-                            <center><h3>Llegada de red BITNET a Panamá</h3></center>
+                            <h3>Llegada de red BITNET a Panamá</h3>
                             <br>
                             <p>
                                 Como fruto de los avances realizados durante 1991 con respecto a la red BITNET en 1992, se ve que todo va encaminado para que se instale este primer nodo, la UTP asumió el costo de la línea de comunicación que el nodo BITNET requería, pagando parte del monto en efectivo y el resto en asesorías. Por lo cual en febrero de este año se le nombra Red Académica Panameña (RAP) al nodo BITNET próximo a instalarse, de esta red formarían parte la UTP, la UP y la USMA.
@@ -214,7 +214,7 @@ https://templatemo.com/tm-518-sentra
                                 En noviembre de 1992 se inaugura uno de los nodos BITNET que se tenían planeados para la RAP, en las instalaciones de la UTP.
                             </p>
                             <br><br>
-                            <center><h3>Transición al internet natural</h3></center> 
+                            <h3>Transición al internet natural</h3>
                             <br>
                             <p>
                                 La red BITNET como anteriormente se comentó, es solo una subred del internet por lo cual lo optimo seria pasar de esta subred al internet natural. Esta transición se empezó a hablar en 1993 cuando la UTP inicia realizando los tramites de solicitud de un bloque de direcciones IP de clase B y la administración del dominio de nivel superior territorial o de código país .PA ante la INTERNIC ahora IANA (Internet Assigned Numbers Authority) e ICANN (Internet Corporation for Assigned Names and Numbers). 
@@ -226,7 +226,7 @@ https://templatemo.com/tm-518-sentra
                                 Sin embargo, el salto definitivo a una utilización masiva de este medio se hace gracias a la creación de Intered Panamá en 1995, a raíz de la Ley de Reestructuración de INTEL.
                             </p>
                             <br>
-                            <center><h3>Integración Panameña al internet</h3></center>
+                            <h3>Integración Panameña al internet</h3>
                             <br>
                             <p>
                                 Así fue como se dio pie al internet como hoy en día lo conocemos, mas con al lanzarlo todavía el internet no fue de máximo uso, solo ciertas personas lo utilizaban para enviar correos electrónicos, comentar en los foros y aun era algo raro de ver en ese entonces. 
@@ -380,7 +380,7 @@ https://templatemo.com/tm-518-sentra
                             
                         </p>
                         <br><br>
-                        <center><h3>Comienzo del Proyecto del Internet </h3></center>
+                        <h3>Comienzo del Proyecto del Internet </h3>
                         <br>
                         <p>
                             La propuesta formal del proyecto del internet, se da con la instalación de los equipos en la Universidad Tecnológica de Panamá, con la reutilización de la conexión con BitNet. Esta era una conexión serial de 19.000 vatios, este consistía en un cable que por vía de microondas conectada con el satélite de Costa Rica. Ya que la compañía Intel (compañía encargada de la telecomunicación, aquí en Panamá) aun no tenían conocimiento de lo que era el internet.
@@ -395,12 +395,12 @@ https://templatemo.com/tm-518-sentra
                             El perfil de los Estudiantes y profesores que querían participar en el proyecto fueron: todo aquel interesado en el proyecto que pudiese aportar, ya fueras estudiante, profesor o todo el que quería venir. Al no tener una idea clara de su uso, ya que no se contaba con una guía de cómo empezar, se tuvo que aprender a cómo utilizarlo, como llamar la atención de las personas para que se motivaran a utilizarlo. Es así como empieza el grupo de trabajo llamado: Internet. 
                         </p> 
                         <br>
-                        <center><h3>El Apoyo de la llegada del Internet </h3></center>
+                        <h3>El Apoyo de la llegada del Internet </h3>
                         <br>
                         <p>
                             El Ingeniero Montemayor (rector en ese momento), que se convenció de que era importante el Internet en Panamá, hizo las articulaciones correspondientes. Es así como poco a poco, la Universidad Tecnológica de Panamá se dio a conocer internacionalmente con el Internet. Ya que antes de su llegada estaba aislada de otros, pues no había teléfono móvil, no había cómo tener contacto con otros, para investigaciones, proyecto y actividades. Debido a esto se empezó a reconocer, no solo por el internet sino también, por las personas que escribían para hacer proyectos de investigación con la universidad, entre otras cosas. Y así podemos notar como el Internet, le abrió sus puertas a las Academias, porque no solamente beneficiaba a la Universidad tecnológica, sino a todas las universidades. Así fue como el internet les abrió las puertas del mundo, para que este sea su campo de juego. 
                         </p>
-                        <br><center><h3>Adversidades del proyecto del internet dentro de la UTP</h2></center>
+                        <br><h3>Adversidades del proyecto del internet dentro de la UTP</h2>
                         <br>
                         <p>
                             Siendo un proyecto que no generaba ingresos, todo tenía que ser subsidiado por el gobierno. Pero tenía una razón de ser, ya que estaban ofreciendo una herramienta educativa a las personas y al país que aún no contaba con esta red.
@@ -412,7 +412,7 @@ https://templatemo.com/tm-518-sentra
                             Los contratos eran más que nada acuerdos de donación, y otros contratos de soporte técnico, como el que la universidad tenía que pagar sus propios equipos. Pero es aquí cuando se presenta una adversidad, ya que, debido a la invasión, la universidad tenía cero presupuestos de inversión. Por 10 años, aun con estos contratos la Universidad no recibió dinero del gobierno, aun cuando era un proyecto educativo. Por mucho tiempo la UTP se adecuó en la autogestión, organizando rifas y actividades para subsidiar el proyecto. Todo esto se hizo gracias a la motivación y creencia que tenían las personas encargadas del proyecto, ya que creían que era importante hacerlo.
                         </p> 
                         <br>
-                        <center><h3>Primer diario digital en Panamá</h3></center>
+                        <h3>Primer diario digital en Panamá</h3>
                         <br>
                         <p>
                             Antes de la llegada del internet se contaba con redes pequeñas como Arpanet, Huracan, entre otras. Estas redes eran pequeñas, eran reservadas a ciertos académicos y eran asíncronas, quiere decir que se tenían que esperar hasta cierta hora para poder mandar un paquete, u otras cosas. 
@@ -468,7 +468,7 @@ https://templatemo.com/tm-518-sentra
                             Esto hizo que el internet siguiera evolucionando en Panamá, donde ya podríamos comunicarnos día a día a nivel mundial, obtener información sobre la tecnología del día, sobre recursos, herramientas, servicios y acceder a información difícil de acceder.
                         </p> 
                         <br>
-                        <center><h3>Y nos hacemos la pregunta, ¿el internet es dañino o tiene algún propósito final? </h3></center>
+                        <h3>Y nos hacemos la pregunta, ¿el internet es dañino o tiene algún propósito final? </h3>
                         <br>
                         <p>
                             El internet fue creado más que todo, para brindar una evolución humana, para poder comunicarnos, para poder entrar en el área de búsqueda de información mas grande del mundo: el internet, pero no es el internet malo, sino el mal uso que se le puede dar, como en el caso del hacker que busca un beneficio propio y amenaza con ataques cibernéticos.
